--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 428px;
-    height: 900px;
+    width: 332.89px;
+    width: clamp(200.89px, 100vw, 332.89px); 
+    height: 700px;
     border-radius: 50px;
     background-color: #050505;
     align-items: flex-end;
@@ -30,35 +31,35 @@ body {
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    top: 218px;
-    margin-left: 55px;
+    top: 160px;
+    left: 625px;
     color: white;
-    font-size: 100px;
+    font-size: 85px;
     font-weight: 300;
-    width: 330px;
+    width: 286px;
     overflow: hidden;
 }
 
 .calculator-btn {
     display: flex;
     align-items: space-between;
-    margin-bottom: 68px;
-    margin-left: 20.6px;
-    margin-right: 25.9px;
+    margin-bottom: 58px;
+    margin-left: 15px;
+    margin-right: 20px;
 }
 
 .btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 85px;
-    width: 85px;
+    height: 65px;
+    width: 65px;
     border-radius:50px;
     border: none;
     background: #323232;
-    font-size: 40px;
+    font-size: 35px;
     color: white;
-    margin: 6px;
+    margin: 4px;
     cursor: pointer;
     transition: .6s;
 }
@@ -76,7 +77,7 @@ body {
 }
 
 #zero-btn {
-    width:190px;
+    width:145px;
 }
 
 #btn-top {
@@ -89,12 +90,12 @@ body {
 }
 
 .bottom {
-    width: 150px;
+    width: 119px;
     height: 5px;
     background: white;
     border-radius: 4px;
     position: absolute;
-    bottom: -150px;
+    bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
 }
