--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ main > h1 {
     display:flex;
     font-weight: bold;
     justify-content:space-around;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
     text-decoration: none;
     font-size: 1.8rem;
     color: var(--color-text);
